// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > context 1`] = `
"/**
 * Auto-generated context factory
 *
 * This module provides a simple API for creating OpenSaas contexts.
 * It abstracts away Prisma client management and configuration.
 *
 * DO NOT EDIT - This file is automatically generated by 'pnpm generate'
 */

import { getContext as getOpensaasContext } from '@opensaas/stack-core'
import type { Session as OpensaasSession, OpenSaasConfig } from '@opensaas/stack-core'
import { PrismaClient } from './prisma-client/client'
import type { Context } from './types'
import configOrPromise from '../opensaas.config'

// Resolve config if it's a Promise (when plugins are present)
const configPromise = Promise.resolve(configOrPromise)
let resolvedConfig: OpenSaasConfig | null = null

// Internal Prisma singleton - managed automatically
const globalForPrisma = globalThis as unknown as { prisma: PrismaClient | null }
let prisma: PrismaClient | null = null

async function getPrisma() {
  if (!prisma) {
    if (!resolvedConfig) {
      resolvedConfig = await configPromise
    }
    prisma = globalForPrisma.prisma ?? resolvedConfig.db.prismaClientConstructor!(PrismaClient)
    if (process.env.NODE_ENV !== 'production') globalForPrisma.prisma = prisma
  }
  return prisma
}

async function getConfig() {
  if (!resolvedConfig) {
    resolvedConfig = await configPromise
  }
  return resolvedConfig
}

/**
 * Storage utilities (not configured)
 */
const storage = {
  uploadFile: async () => {
    throw new Error('Storage is not configured. Add storage providers to your opensaas.config.ts')
  },
  uploadImage: async () => {
    throw new Error('Storage is not configured. Add storage providers to your opensaas.config.ts')
  },
  deleteFile: async () => {
    throw new Error('Storage is not configured. Add storage providers to your opensaas.config.ts')
  },
  deleteImage: async () => {
    throw new Error('Storage is not configured. Add storage providers to your opensaas.config.ts')
  },
}

/**
 * Get OpenSaas context with optional session
 *
 * @param session - Optional session object (structure defined by your application)
 *
 * @example
 * \`\`\`typescript
 * // Anonymous access
 * const context = await getContext()
 * const posts = await context.db.post.findMany()
 *
 * // Authenticated access
 * const context = await getContext({ userId: 'user-123' })
 * const myPosts = await context.db.post.findMany()
 *
 * // With custom session type
 * type CustomSession = { userId: string; email: string; role: string } | null
 * const context = await getContext<CustomSession>({ userId: '123', email: 'user@example.com', role: 'admin' })
 * // context.session is now typed as CustomSession
 * \`\`\`
 */
export async function getContext<TSession extends OpensaasSession = OpensaasSession>(session?: TSession): Promise<Context<TSession>> {
  const config = await getConfig()
  const prismaClient = await getPrisma()
  return getOpensaasContext(config, prismaClient, session ?? null, storage) as Context<TSession>
}

/**
 * Raw context for synchronous initialization (e.g., Better-auth setup)
 * This is only available after config is resolved, use with caution
 */
export const rawOpensaasContext = (async () => {
  const config = await getConfig()
  const prismaClient = await getPrisma()
  return getOpensaasContext(config, prismaClient, null, storage)
})()

/**
 * Re-export resolved config for use in admin pages and server actions
 * This is a promise that resolves to the config
 */
export const config = getConfig()
"
`;

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > prisma-schema 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String
  email        String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > types 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string
  email: string
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name: string
  email: string
}

export type UserUpdateInput = {
  name?: string
  email?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
  email?: { equals?: string, not?: string }
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Generate Command Integration > Generator Integration > should generate consistent output across multiple runs > consistent-output 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > mysql-provider 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "mysql"
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > postgresql-provider 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > sqlite-provider 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle empty lists config > empty-lists-schema 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle empty lists config > empty-lists-types 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Generate Command Integration > Generator Integration > should overwrite existing files > overwrite-after 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should overwrite existing files > overwrite-before 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;
